   Properties are per logging event where MDC values are per thread. 
 
 - Another LoggingEvent constructor was added to allow instances to be reconstituted 
   when received from remote sources that do not use LoggingEvent as the transport 
   type (like XML for example).   

 - Fixed bug #23096. NullAppender getInstance method is now declared as a static.  
 
 February 19th, 2003
 
 - Release of version 1.2.8

 - Fixed bug #11570 whereby XMLAppender would throw a
   NullPointerException if the input message was null. Many thanks to
   David Vandegrift for reporting the bug and to Hendrik Brummermann for
   supplying the patch. [*]

 - Fixed bug #12366 whereby various versions of Xerces would not parse
   log4j configuration scripts expressed in XML format. [*]

 - Fixed bug #14827. The "removes" buffer used in the flushBuffer() method
   of JDBCAppender is now cleared, solving the memory leak.  Thanks to John
   Landers for reporting the bug and suggesting the fix. [*]

 - Fixed bug #15599. SocketAppender now honors ReconnectionDelay of 0.
   Many thanks to Scott Schram for reporting the bug and providing the fix. [*]

 October 9th, 2002

 - Release of version 1.2.7

 - Log4j now searches for the file log4j.xml as well as the file
   log4j.properties during log4j initialization. [*]

 July 31st, 2002

 - Release of version 1.2.6

 - Addition of new options in JMSAppender and new command line arguments in 
   JMSSink. [*]

 - Added new method getLoggerName() in LoggingEvent class. The
   getLoggerName is the preferred way for accessing the logger
   name. The public access categoryName field should not be accessed
   directly. Similarly, added the getLevel method which is now the
   preferred way of accessing the event's level. The public access
   level field should not be accessed directly.  The javadocs now mark
   the categoryName and level fields as deprecated.

   Modified existing appenders to comply with these new directives. [*]
