@@ -3,4 +3,4 @@ log4j.appender.testAppender=org.apache.log4j.FileAppender
 log4j.appender.testAppender.File=       output/temp 
 log4j.appender.testAppender.Append=false
 log4j.appender.testAppender.layout=pattern.MyPatternLayout
-log4j.appender.testAppender.layout.ConversionPattern=%5p %-4# - %m%n
+log4j.appender.testAppender.layout.ConversionPattern=%5p %-4counter - %m%n
